respuestas en es_ES

--- a/composer.json
+++ b/composer.json
@@ -10,13 +10,16 @@
     "require": {
         "php": "^8.2",
         "laravel/framework": "^11.0",
+        "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
-        "predis/predis": "^2.2"
+        "predis/predis": "^2.2",
+        "propaganistas/laravel-phone": "^5.2"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^3.0",
         "fakerphp/faker": "^1.23",
         "knuckleswtf/scribe": "^4.33",
+        "laravel-lang/common": "^6.1",
         "laravel/pint": "^1.13",
         "laravel/sail": "^1.26",
         "mockery/mockery": "^1.6",
