--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
 APP_NAME="Ultra Media Secure Service"
 APP_ENV=local
 APP_KEY=base64:1KycWgdLC3pcZuEL5QCZ1gWccjZZMUX0I0O05Nwouew=
-APP_DEBUG=true
+APP_DEBUG=false
 APP_TIMEZONE=America/Mexico_City
-APP_URL=http://localhost:8000
+APP_URL=
 
 APP_LOCALE=es
 APP_FALLBACK_LOCALE=es
@@ -22,8 +22,8 @@ LOG_LEVEL=debug
 DB_CONNECTION=mariadb
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=clvrt_hackathon
-DB_USERNAME=root
+DB_DATABASE=
+DB_USERNAME=
 DB_PASSWORD=
 
 SESSION_DRIVER=database
@@ -32,11 +32,10 @@ SESSION_ENCRYPT=false
 SESSION_PATH=/
 SESSION_DOMAIN=null
 
-BROADCAST_CONNECTION=log
-FILESYSTEM_DISK=public
-QUEUE_CONNECTION=database
+BROADCAST_CONNECTION=redis
+QUEUE_CONNECTION=redis
 
-CACHE_STORE=database
+CACHE_STORE=file
 CACHE_PREFIX=
 
 WCHAT_URL=
@@ -46,5 +45,15 @@ REDIS_CLIENT=predis
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
+
+FILESYSTEM_DISK=minio
+
+MINIO_ACCESS_KEY_ID=
+MINIO_SECRET_ACCESS_KEY=
+MINIO_DEFAULT_REGION=
+MINIO_BUCKET="umss"
+MINIO_URL=
+MINIO_ENDPOINT=
+MINIO_USE_PATH_STYLE_ENDPOINT=true
 
 VITE_APP_NAME="${APP_NAME}"
