--- a/.env.example
+++ b/.env.example
@@ -2,22 +2,11 @@ APP_NAME="Ultra Media Secure Service"
 APP_ENV=local
 APP_KEY=base64:1KycWgdLC3pcZuEL5QCZ1gWccjZZMUX0I0O05Nwouew=
 APP_DEBUG=false
-APP_TIMEZONE=America/Mexico_City
 APP_URL=
 
-APP_LOCALE=es
-APP_FALLBACK_LOCALE=es
-APP_FAKER_LOCALE=es_ES
-
-APP_MAINTENANCE_DRIVER=file
-APP_MAINTENANCE_STORE=database
-
-BCRYPT_ROUNDS=12
-
-LOG_CHANNEL=daily
-LOG_STACK=single
-LOG_DEPRECATIONS_CHANNEL=null
-LOG_LEVEL=debug
+ADMIN_PHONE=
+ADMIN_EMAIL=
+ADMIN_PASSWORD=
 
 DB_CONNECTION=mariadb
 DB_HOST=127.0.0.1
@@ -26,22 +15,6 @@ DB_DATABASE=
 DB_USERNAME=
 DB_PASSWORD=
 
-SESSION_DRIVER=database
-SESSION_LIFETIME=120
-SESSION_ENCRYPT=false
-SESSION_PATH=/
-SESSION_DOMAIN=null
-
-BROADCAST_CONNECTION=redis
-QUEUE_CONNECTION=redis
-
-CACHE_STORE=file
-CACHE_PREFIX=
-
-WCHAT_URL=
-WCHAT_TOKEN=
-
-REDIS_CLIENT=predis
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
